# rusty-chip8

./: .editorconfig  Cargo.toml  README.md  develop.sh
src/: camera.rs  error.rs  lib.rs  main.rs  mesh.rs  renderer.rs  screen.rs  world.rs
src/shaders/: opaque.wgsl
