[package]
name = "rusty-chip8"
version = "0.0.0"
edition = "2021"

[dependencies]
thiserror = "1.0.61"
rand = "0.8.5"
pollster = "0.3.0"
wgpu = "0.20.1"
winit = "0.29.15"
log = "0.4.22"
bytemuck = { version = "1.16.1", features = ["derive"] }
cgmath = "0.18.0"
rodio = "0.19.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"
clap = { version = "4.5.9", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
  "Location",
  "Blob",
  "RequestInit",
  "RequestMode",
  "Request",
  "ImageData",
  "Response",
  "HtmlImageElement",
  "WebGl2RenderingContext",
  "CanvasRenderingContext2d",
] }
